Granger Casuality test corrected

--- a/Stationary.ipynb
+++ b/Stationary.ipynb
@@ -684,24 +684,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "3ca667bb-0061-46a1-8f6f-e1c1e3444fbe",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'grangercausalitytests'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgrangercausalitytests\u001b[39;00m\n\u001b[0;32m      3\u001b[0m max_lag \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      5\u001b[0m currency_pairs \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEURUSD=X_close\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGBPUSD=X_close\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAUDUSD=X_close\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'grangercausalitytests'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Granger Causality Test Results with Optimal Lag:\n",
+      "EURUSD=X_close causes GBPUSD=X_close: p-value = 0.1962\n",
+      "EURUSD=X_close causes AUDUSD=X_close: p-value = 0.3941\n",
+      "GBPUSD=X_close causes EURUSD=X_close: p-value = 0.2485\n",
+      "GBPUSD=X_close causes AUDUSD=X_close: p-value = 0.8802\n",
+      "AUDUSD=X_close causes EURUSD=X_close: p-value = 0.3121\n",
+      "AUDUSD=X_close causes GBPUSD=X_close: p-value = 0.5293\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\stattools.py:1545: FutureWarning: verbose is deprecated since functions should not print results\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\stattools.py:1545: FutureWarning: verbose is deprecated since functions should not print results\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\stattools.py:1545: FutureWarning: verbose is deprecated since functions should not print results\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\stattools.py:1545: FutureWarning: verbose is deprecated since functions should not print results\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\stattools.py:1545: FutureWarning: verbose is deprecated since functions should not print results\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\tsa\\stattools.py:1545: FutureWarning: verbose is deprecated since functions should not print results\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "import grangercausalitytests\n",
+    "from statsmodels.tsa.stattools import grangercausalitytests\n",
     "\n",
     "max_lag = 1\n",
     "\n",
